--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" class="favicon" type="image/x-icon" href="images/favicon.png">
-    <title>Tejas Gupta | Portfolio</title>
+    <title>Priyatham Jalagadugula | Portfolio</title>
     <link rel="stylesheet" href="tabs/style.css">
 </head>
 <div class="infinity">
-    <p class="chat">Hey! I'm <b>Infinity°</b>.<br>Tejas' AI assistant.</p>
+    <p class="chat">Hey! I'm <b>Infinity°</b>.<br>Priyatham's AI assistant.</p>
 </div>
 
 <body id="body">
@@ -39,7 +39,7 @@
     </div>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/top.png" class="top"></button>
-    <div class="by" id="by">Designed & Developed by Tejas</div>
+    <div class="by" id="by">Designed & Developed by Priyatham</div>
 
     <img src="images/earth.png" class="cover" id="cover">
     </div>
@@ -62,23 +62,22 @@
             <div class="2">
                 <div id="symbol">
                     <img src="images/user.png" class="smallicon">
-                    <b>TEJAS GUPTA</b>
+                    <b>Priyatham Jalagadugula</b>
                 </div>
                 <div id="symbol">
                     <img src="images/graduation.png" alt="student" class="smallicon">
-                    <a href="https://bvucoepune.edu.in/" class="normal">Student at Bharati Vidyapeeth<br>(Deemed to be)
-                        University,<br>College of Engineering</a>
+                    <a href="https://bvucoepune.edu.in/" class="normal">Student at Gayatri Vidya Parishad <br>College of Engineering</a>
                 </div>
                 <div id="symbol">
                     <img src="images/pin.png" alt="pin" class="smallicon">
-                    <a href="https://www.google.com/maps/place/Pune,+Maharashtra/" class="normal">Pune, Maharashtra,
+                    <a href="https://www.google.com/maps/place/Pune,+Maharashtra/" class="normal">Kommadi, Andhra Pradesh,
                         India.</a>
                 </div>
             </div>
         </div>
         <div class="box">
             <div class="left" id="left">
-                <p class="text">Hey!<br>I'm <b>Tejas Gupta</b>,
+                <p class="text">Hey!<br>I'm <b>Priyatham Jalagadugula</b>,
                 <div class="intro">A passionate and aspiring software engineering major. Welcome to my digital space,
                     where
                     lines of code converge with creativity. Explore my portfolio to witness my journey, showcasing
@@ -292,19 +291,19 @@
                                         <div class="exp"><a href="http://www.blotic.xyz/"><img src="images/blotic.png"
                                                     class="orglogo"></a>
 
-                                            <div class="role">Website Developer | Blotic</div>
+                                            <div class="role">Website Developer | Book Store</div>
                                         </div>
                                     </div>
                                     <div class="indent">
                                         <div class="expinfo">
-                                            <div class="date">Dec 2023 - Jan 2024</div>
+                                            <div class="date">Aug 2024 - Dec 2024</div>
                                             <div class="country">India (Remote)</div>
                                         </div>
-                                        <br>- Spearheaded website development for Blotic, enhancing the e-learning
+                                        <br>- Spearheaded website development for Book storing, enhancing the educational
                                         platform.
                                         <br>- Implemented responsive design for optimal user experience across devices.
                                         <br>- Collaborated with team members to address technical challenges and provide
-                                        innovative solutions.
+                                        various books.
                                         <br><br>🔗<a href="https://bloticbvucoep.netlify.app/" class="normal">Visit Live
                                             Site</a>
                                     </div>
@@ -368,21 +367,20 @@
                                     <div class="timeline">
                                         <p><b>2022-Present</b>
                                     </div>
-                                    <div class="indent">Bachelor of Technology (B.Tech.)<br>Computer Science & Business
-                                        Systems<br>
+                                    <div class="indent">Bachelor of Technology (B.Tech.)<br>Information Technology<br>
                                         CGPA:
-                                        9.44&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[II Year]<br><a href="https://bvucoepune.edu.in/" class="normal">BV(DU) COE, Pune,
-                                            Maharashtra,
+                                        8.4&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[III Year]<br><a href="https://bvucoepune.edu.in/" class="normal">Kommadi,Visakhapatnam, Andhra Pradesh,
+                                            
                                             India</a></p>
                                     </div>
                                     <div class="timeline">
                                         <p><b>2021-2022</b>
                                     </div>
-                                    <div class="indent">A.I.S.S.C.E. (Class XII)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[91.4%]<br>
-                                        Central Board of Secondary Education (C.B.S.E.)<br><a
-                                            href="https://www.kcmmbd.com/index.html" class="normal">K.C.M. School,
-                                            Moradabad,
-                                            U.P.,
+                                    <div class="indent">N.R.I Kalasala (Class XII)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[85 %]<br>
+                                        Board of Intermediate Education,Andhra Pradesh(B.I.E.A.P)<br><a
+                                            href="https://www.kcmmbd.com/index.html" class="normal">N.R.I Junior Kalasala,
+                                            Srinagar,
+                                            A.P.,
                                             India</a></p>
                                     </div>
                                     <div class="timeline">
